--- a/project-1/style.css
+++ b/project-1/style.css
@@ -21,12 +21,27 @@ h1 {
     height: 100%;
 }
 
+h2 {
+    text-align: center;
+	font-size: 20px;
+  font-family: times sans-serif;
+  color: #FF007F;
+    height: 100%;
+}
+
 body1{
   background-image: url("image/redpurple.png");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
   background-size:cover
+}
+
+p {
+
+    margin: px;
+    font-family: times new roman bold;
+    color: #ffffff;
 }
 
 
